force-app/main/default/objects/TDF_Field_Default__mdt/TDF_Field_Default__mdt.object-meta.xml
<CustomObject>
    <label>TDF Field Default</label>
    <pluralLabel>TDF Field Default</pluralLabel>
</CustomObject>