force-app/main/default/objects/TDF_Field_Default__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <description>Enter the API Name of the Field which we need to Override.</description>
    <inlineHelpText>Enter the API Name of the Field which we need to Override.</inlineHelpText>
    <label>FieldApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>