force-app/main/default/objects/TDF_Field_Default__mdt/fields/RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDevName__c</fullName>
    <description>Enter the Record Type Developer Name, this can be Empty also.</description>
    <inlineHelpText>Enter the Record Type Developer Name, this can be Empty also.</inlineHelpText>
    <label>RecordTypeDevName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>