force-app/main/default/objects/TDF_Field_Default__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Enter the API Name of SObject for which this will be the default.</description>
    <inlineHelpText>Enter the API Name of SObject for which this will be the default.</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>